--- a/tables/planetData/planetData.html
+++ b/tables/planetData/planetData.html
@@ -4,15 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Planet's Data</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="planet.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <h1>Planet's Data</h1>
 
     <table>
+
         <caption>
             Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).
         </caption>
+
+        <colgroup>
+            <col>
+            <col>
+            <col>
+            <col>
+            <col style="background-color: rgb(247, 225, 225);">
+            <col >
+            <col style="background-color: rgb(247, 225, 225);">
+            <col>
+            <col style="background-color: rgb(247, 225, 225);">
+            <col>
+            <col style="background-color: rgb(247, 225, 225);">
+            <col>
+        </colgroup>
 
             <thead>
             <tr>
@@ -53,6 +69,7 @@
                 <td>108.2</td>
                 <td>464</td>
                 <td>0</td>
+                <td></td>
             </tr>
 
             <tr>
